--- a/deeplearning1/nbs/lesson1.ipynb
+++ b/deeplearning1/nbs/lesson1.ipynb
@@ -50,7 +50,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda2/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline"
    ]
@@ -64,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "path = \"data/dogscats/\"\n",
-    "#path = \"data/dogscats/sample\/\""
+    "path = \"/home/ubuntu/nbs/data/dogscats/\"\n",
+    "#path = \"data/dogscats/sample/\""
    ]
   },
   {
@@ -117,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using gpu device 0: Tesla K80 (CNMeM is disabled, cuDNN 5103)\n",
+      "Using gpu device 0: GRID K520 (CNMeM is disabled, cuDNN 5103)\n",
       "/home/ubuntu/anaconda2/lib/python2.7/site-packages/theano/sandbox/cuda/__init__.py:600: UserWarning: Your cuDNN version is more recent than the one Theano officially supports. If you see any problems, try updating Theano or downgrading cuDNN to version 5.\n",
       "  warnings.warn(warn)\n",
       "Using Theano backend.\n"
@@ -156,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -169,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -192,9 +201,7 @@
      "output_type": "stream",
      "text": [
       "Found 23000 images belonging to 2 classes.\n",
-      "Found 2000 images belonging to 2 classes.\n",
-      "Epoch 1/1\n",
-      "23000/23000 [==============================] - 588s - loss: 0.1229 - acc: 0.9672 - val_loss: 0.0581 - val_acc: 0.9820\n"
+      "Found 2000 images belonging to 2 classes.\n"
      ]
     }
    ],
